--- a/Code/LagrangeParameters.ipynb
+++ b/Code/LagrangeParameters.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "IDENTIFIER = \"haydn-op1\"\n",
-    "NUM = 4\n",
+    "IDENTIFIER = \"beethoven-op67\"\n",
+    "NUM = 2\n",
     "\n",
     "picklePath = f\"../Pickles/{IDENTIFIER}/{IDENTIFIER}_\"\n",
     "numPath = f\"../Pickles/{IDENTIFIER}/{NUM}/{IDENTIFIER}_{NUM}_\"\n",
@@ -32,6 +32,23 @@
     "embedding = json.load(open(numPath + \"embedding.json\", \"r\"))\n",
     "\n",
     "sampler = FixedEmbeddingComposite(DWaveSampler(), embedding)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2912\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sum(len(embedding[i]) for i in embedding))"
    ]
   },
   {
